<resources>
    <string name="app_name">PokemonGameQuiz</string>

    <string name="txt_start_page">Android Quiz Applications Tutorial </string>
    <string name="str_start_now">Start Now</string>
    <string name="str_next">Next</string>
    <string name="str_done">Done</string>
    <string name="str_results">Results</string>
    <string name="str_gotohome">Go to Home</string>
    <string name="str_viewans">View Answer</string>

    <!-- TeamA Label-->
    <string name="label_teamA">Brionne</string>

    <!-- Team Score -->
    <string name="score_card">0</string>

    <!-- Button Text Score Value -->
    <string name="score">Score</string>
    <string name="health">Health</string>
    <string name="score_three">Hyper Voice</string>
    <string name="score_two">Water Gun</string>
    <string name="free_throw">Double Slap</string>


    <string name="attack1">Fury Attack</string>
    <string name="attack2">Acid</string>
    <string name="attack3">Fury Attack</string>

    <!--TeamB Label -->
    <string name="label_teamB">Poipole</string>

    <!--Rest Button Text -->
    <string name="reset_text">Reset</string>
</resources>
