<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/battle_background">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/brionne" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="50dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/poke_poipole" />

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="311dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="0dp"
            android:background="@color/background_a"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="200dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="200dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding"
                    android:text="@string/label_teamA"
                    android:textColor="@color/color_teams"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/color_title"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/score"
                        android:textColor="#fff"
                        android:textSize="@dimen/scoreSize" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:text="@string/health"
                        android:textColor="#fff"
                        android:textSize="@dimen/scoreSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/waveColor_a"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/score_card"
                        android:textColor="@color/score_color"
                        android:textSize="@dimen/score_board" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray">


                    </View>

                    <TextView
                        android:id="@+id/team_a_life"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/score_card"
                        android:textColor="@color/score_color"
                        android:textSize="@dimen/score_board" />

                </LinearLayout>




                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="60dp"
                    android:onClick="addTowForTeamB"
                    android:text="@string/score_two" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="60dp"
                    android:onClick="addOneForTeamB"
                    android:text="@string/free_throw" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_b"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding"
                    android:text="@string/label_teamB"
                    android:textColor="@color/color_teams"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/color_title"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/score"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/scoreSize" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:text="@string/health"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/scoreSize" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/waveColor_b"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/score_card"
                        android:textColor="@color/score_color"
                        android:textSize="@dimen/score_board" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/darker_gray">


                    </View>

                    <TextView
                        android:id="@+id/team_b_life"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/score_card"
                        android:textColor="@color/score_color"
                        android:textSize="@dimen/score_board" />

                </LinearLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="18dp"
                    android:onClick="addTowForTeamB"
                    android:text="@string/score_two" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="18dp"
                    android:onClick="addOneForTeamB"
                    android:text="@string/free_throw" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/reset_margin"
            android:layout_marginRight="@dimen/reset_margin"
            android:onClick="resetScore"
            android:text="@string/reset_text" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>